--- a/Aplicatii mobile/Proiect/app/src/main/res/layout/activity_main.xml
+++ b/Aplicatii mobile/Proiect/app/src/main/res/layout/activity_main.xml
@@ -6,21 +6,20 @@
     tools:context=".MainActivity">
 
     <ListView
+        android:id="@+id/lvItems"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lvItems"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/btnAddList" />
 
     <Button
+        android:id="@+id/btnAddList"
+        android:text="Add List"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add List"
-        android:id="@+id/btnAddList"
+        android:layout_marginRight="10dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:onClick="onAddList" />
 
