--- a/Aplicatii mobile/Proiect/app/src/main/res/layout/shopping_list.xml
+++ b/Aplicatii mobile/Proiect/app/src/main/res/layout/shopping_list.xml
@@ -6,21 +6,21 @@
     tools:context=".MainActivity">
 
     <ListView
-        android:id="@+id/lvLists"
+        android:id="@+id/lvProducts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_above="@+id/btnAddList" />
+        android:layout_above="@+id/btnAddProduct" />
 
     <Button
-        android:id="@+id/btnAddList"
-        android:text="Add List"
+        android:id="@+id/btnAddProduct"
+        android:text="Add Product"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:onClick="onAddList" />
+        android:onClick="onAddProduct" />
 
 </RelativeLayout>
