--- a/Aplicatii mobile/Proiect/app/src/main/res/layout/product_row.xml
+++ b/Aplicatii mobile/Proiect/app/src/main/res/layout/product_row.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/tvDate"
+        android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
@@ -15,18 +15,18 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvDate">
+        android:layout_below="@+id/tvName">
 
         <TextView
-            android:id="@+id/tvTotalLabel"
-            android:text="Total: "
+            android:id="@+id/tvPriceLabel"
+            android:text="Price: "
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:textSize="20dp" />
 
         <TextView
-            android:id="@+id/tvTotal"
+            android:id="@+id/tvPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvDate"
