--- a/Aplicatii mobile/Proiect/app/src/main/res/layout/add_product.xml
+++ b/Aplicatii mobile/Proiect/app/src/main/res/layout/add_product.xml
@@ -9,6 +9,7 @@
         android:id="@+id/etProductName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
         android:hint="Product name" />
 
     <EditText
@@ -16,6 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/etProductName"
+        android:layout_marginLeft="20dp"
         android:hint="Price"
         android:inputType="numberDecimal" />
 
