--- a/Aplicatii mobile/Proiect/app/src/main/res/layout/shopping_list.xml
+++ b/Aplicatii mobile/Proiect/app/src/main/res/layout/shopping_list.xml
@@ -3,15 +3,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ShoppingList">
+
+    <LinearLayout
+        android:id="@+id/totalLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp" >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total:"
+            android:textSize="36dp"
+            android:textStyle="bold"
+            android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/tvListTotal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textSize="36dp"
+            android:textStyle="bold"
+            android:textColor="@color/black"  />
+    </LinearLayout>
 
     <ListView
         android:id="@+id/lvProducts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_above="@+id/btnAddProduct" />
+        android:layout_above="@+id/btnAddProduct"
+        android:layout_below="@+id/totalLayout"/>
 
     <Button
         android:id="@+id/btnAddProduct"
